# OpenFlightStatisticsAggregator

./: .gitignore  DOW.md  LICENSE  README.md  setup.py
DatabaseNormalizer/: Makefile  README.md  requirements.txt
DatabaseNormalizer/data_injector/: __init__.py  injector.py
DatabaseNormalizer/data_injector/table_objects/: __init__.py  airline.py  airport.py  airway.py  city.py  country.py  dst.py  fly_on.py  iata.py  icao.py  plane.py  plane_type.py  timezone.py
DatabaseNormalizer/database_normalizer/: __init__.py  database_normalizer.py
DatabaseNormalizer/database_normalizer/Exceptions/: csv_exceptions.py
DatabaseNormalizer/database_normalizer/csv_utils/: __init__.py  normalizer.py  reader.py  utils.py
DatabaseNormalizer/database_normalizer/exceptions/: __init__.py  csv_exceptions.py
DatabaseNormalizer/db_normalizer/: __init__.py  database_normalizer.py
DatabaseNormalizer/db_normalizer/csv_handler/: __init__.py  normalizer.py  reader.py  utils.py
NetworkOperations/: CMakeLists.txt  main.c
NetworkOperations/algorithms/: algorithms.h
NetworkOperations/algorithms/pathfinding/: a_star.c  a_star.h  dijkstra.c  dijkstra.h
NetworkOperations/algorithms/structure/: graph.c  graph.h
NetworkOperations/client/: client.c  client.h
NetworkOperations/dal/: dal.c  dal.h
NetworkOperations/log/: logger.c  logger.h
NetworkOperations/server/: server.c  server.h
NetworkOperations/tcp/: tcp_errors.h
resources/database_modelisation/: plantuml_sources.txt
resources/planification_reports/: sprint_1.md  sprint_2.md
resources/sql/: country.sql  icao.sql
(+101 files in other folders)
